Added display format (Items listed in groups by listID, sorted by listId then by *name*, and blank names filtered out)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">FetchCodingExercise</string>
+    <string name="listid">listID</string>
+    <string name="id_placeholder">ID</string>
+    <string name="listid_placeholder">ListID</string>
+    <string name="name_placeholder">Name</string>
 </resources>
